Fix spacing in app overview

--- a/modules/portmaster/src/app/pages/app-settings/overview.scss
+++ b/modules/portmaster/src/app/pages/app-settings/overview.scss
@@ -5,47 +5,42 @@
 .header-title {
   display: flex;
   width: 100%;
-  padding-left: 3rem;
-  padding-right: 1.25rem;
   margin-bottom: 0.5rem;
   align-items: center;
   height: 3rem;
   flex-shrink: 0;
 
-  h1{
+  h1 {
     flex-grow: unset;
   }
 
-  fa-icon[icon*="question-circle"]{
+  fa-icon[icon*="question-circle"] {
     margin-left: 0.35rem;
   }
 }
 
 .scrollable {
   width: auto;
-  @apply mr-4;
-  @apply ml-10;
-
-  flex-grow            : 0;
-  display              : grid;
+  flex-grow: 0;
+  display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap                  : 1rem;
+  gap: 1rem;
 }
 
 
-.scrollable-header{
+.scrollable-header {
 
   @apply bg-background;
   @apply pt-4;
   @apply pb-1;
-  width   : 100%;
+  width: 100%;
   position: sticky;
-  top     : 0px;
+  top: 0px;
   display: flex;
 
   grid-column: 1 / -1;
 
-  fa-icon[icon*="question-circle"]{
+  fa-icon[icon*="question-circle"] {
     margin-left: 0.35rem;
   }
 }
